[gd_scene load_steps=18 format=3 uid="uid://cgg3hms7pb3iv"]

[ext_resource type="PackedScene" uid="uid://ccfhkly2tsur7" path="res://elements/player/player.tscn" id="1_oiar6"]
[ext_resource type="Script" uid="uid://c102gsga6r4wc" path="res://elements/player/player_view.gd" id="2_o8xu2"]
[ext_resource type="Texture2D" uid="uid://dudoenkqdp5vi" path="res://assets/character/view.png" id="3_n031k"]
[ext_resource type="Script" uid="uid://bkly5jbqpf05x" path="res://elements/player/collision_shape_2d.gd" id="4_5iyc5"]
[ext_resource type="Texture2D" uid="uid://drslv8057t82f" path="res://assets/character/view_idle.png" id="5_ybl3g"]
[ext_resource type="Texture2D" uid="uid://dadeu4sls0qu4" path="res://assets/light/torch-fade.png" id="6_72shw"]
[ext_resource type="Texture2D" uid="uid://msovp1timoy7" path="res://assets/light/light2.png" id="7_72shw"]
[ext_resource type="Texture2D" uid="uid://cml1i42cmucrl" path="res://assets/ui/fail2.png" id="8_6n2qv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybl3g"]
size = Vector2(38, 20)

[sub_resource type="Animation" id="Animation_ybl3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_n031k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n031k"]
resource_name = "idle"
length = 0.32
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ybl3g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_5iyc5"]
resource_name = "walk"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, -74), Vector2(-33, -72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_n031k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ybl3g"]
_data = {
&"RESET": SubResource("Animation_ybl3g"),
&"idle": SubResource("Animation_n031k"),
&"walk": SubResource("Animation_5iyc5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5iyc5"]
size = Vector2(37, 20)

[sub_resource type="Animation" id="Animation_fvpgq"]
resource_name = "respawn"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fail2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2055, 2068), Vector2(1280, 693), Vector2(1280, 693), Vector2(1887, 1897)]
}

[sub_resource type="Animation" id="Animation_mde2x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fail2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2055, 1914)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1wba"]
_data = {
&"RESET": SubResource("Animation_mde2x"),
&"respawn": SubResource("Animation_fvpgq")
}

[node name="PlayerView" instance=ExtResource("1_oiar6")]
collision_mask = 4
script = ExtResource("2_o8xu2")

[node name="Sprite2D" parent="." index="0"]
position = Vector2(-16, -75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_n031k")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ybl3g")

[node name="AreaView" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AreaView" index="0"]
position = Vector2(0, -38)
polygon = PackedVector2Array(8, -22, 832, -168, 832, 168, 8, 20)
script = ExtResource("4_5iyc5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_ybl3g")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHurt" index="0"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_5iyc5")

[node name="PointLight2D" type="PointLight2D" parent="." index="6"]
position = Vector2(-1.52588e-05, -40)
scale = Vector2(2.721, 1.505)
shadow_enabled = true
texture = ExtResource("6_72shw")
offset = Vector2(175.827, 3.82059)
texture_scale = 0.4

[node name="PointLight2D2" type="PointLight2D" parent="." index="7"]
position = Vector2(0, -39)
scale = Vector2(1.5, 1.5)
energy = 0.5
texture = ExtResource("7_72shw")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="9"]

[node name="Fail2" type="Sprite2D" parent="CanvasLayer" index="0"]
position = Vector2(2055, 1914)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_6n2qv")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="10"]
libraries = {
&"": SubResource("AnimationLibrary_i1wba")
}

[connection signal="body_entered" from="AreaView" to="." method="_on_area_view_body_entered"]
[connection signal="body_exited" from="AreaView" to="." method="_on_area_view_body_exited"]
